// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Paragraph Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <p
    className="paragraph color-base size-sm"
  >
    Consent doubt Tuckborough challenge destroying.
  </p>
  <p
    className="paragraph color-primary size-sm"
  >
    Consent doubt Tuckborough challenge destroying.
  </p>
  <p
    className="paragraph color-inverted size-sm"
  >
    Consent doubt Tuckborough challenge destroying.
  </p>
</div>
`;

exports[`Storyshots Atoms/Paragraph Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <p
    className="paragraph color-base size-sm"
  >
    Consent doubt Tuckborough challenge destroying.
  </p>
</div>
`;

exports[`Storyshots Atoms/Paragraph Size 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
      "padding": "2em",
    }
  }
>
  <p
    className="paragraph color-base size-sm"
  >
    Consent doubt Tuckborough challenge destroying.
  </p>
  <p
    className="paragraph color-base size-md"
  >
    Consent doubt Tuckborough challenge destroying.
  </p>
  <p
    className="paragraph color-base size-lg"
  >
    Consent doubt Tuckborough challenge destroying.
  </p>
</div>
`;
